--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,12 +38,12 @@ body {
 #numberKeys {
     display: flex;
     flex-direction: column;
-    background-color: dodgerblue;
+    background-color: rgb(46, 93, 141);
     border: solid var(--bestblack);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-width: 1px;
-    border-color: #007bff;
+    border-color: rgb(46, 93, 141);
     opacity: 90%;
     width: 330px;
     flex-wrap: wrap;
@@ -53,7 +53,7 @@ body {
     height: 4rem;
     opacity: 80%;
     align-content: flex-start;
-    background-color: dodgerblue;
+    background-color: rgb(46, 93, 141);
     color: white;
     text-shadow: 2px 2px var(--bestblack);
     border-style: none;
@@ -127,8 +127,7 @@ body {
     margin: 0px auto;
 }
 #calculator {
-    box-shadow: 10px 10px 10px;
-    box-shadow: 3px 3px 8px 3px #888888;
+    box-shadow: 5px 0px 8px 1px #888888;
 }
 #screen {
     text-align: right;
